// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formml declaration grammar > function > declare function 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > declare function with multiple parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "value",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > declare function with one parameter 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > parameters allow trailing comma 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > can omit type hint 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be any 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "AnyTypeExpr",
            "name": "any"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "AnyTypeExpr",
            "name": "any"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be optional 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "NumTypeExpr",
            "name": "num"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "optional": true,
          "type": {
            "$type": "AnyTypeExpr",
            "name": "any"
          }
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be primitive type "bool" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "BoolTypeExpr",
            "name": "bool"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "BoolTypeExpr",
            "name": "bool"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be primitive type "datetime" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "DatetimeTypeExpr",
            "name": "datetime"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "DatetimeTypeExpr",
            "name": "datetime"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be primitive type "decimal" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "DecimalTypeExpr",
            "name": "decimal"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "DecimalTypeExpr",
            "name": "decimal"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be primitive type "num" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "NumTypeExpr",
            "name": "num"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "NumTypeExpr",
            "name": "num"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > parameters can be primitive type "text" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "TextTypeExpr",
            "name": "text"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "TextTypeExpr",
            "name": "text"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > return type can be any 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "returnType": {
        "$type": "AnyTypeExpr",
        "name": "any"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > return type can be primitive type "bool" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "returnType": {
        "$type": "BoolTypeExpr",
        "name": "bool"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > return type can be primitive type "datetime" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "returnType": {
        "$type": "DatetimeTypeExpr",
        "name": "datetime"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > return type can be primitive type "decimal" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "returnType": {
        "$type": "DecimalTypeExpr",
        "name": "decimal"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > return type can be primitive type "num" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "returnType": {
        "$type": "NumTypeExpr",
        "name": "num"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > function > type hints > return type can be primitive type "text" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "returnType": {
        "$type": "TextTypeExpr",
        "name": "text"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;
